--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -216,7 +216,8 @@
         <Text layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?" wrappingWidth="136.91082000732422" />
         <Text layoutX="308.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi Con Il Tasto Destro Del Mouse Per Le Azioni" wrappingWidth="277.5774459838867" />
         <ComboBox fx:id="comboBoxTableView" layoutX="117.0" layoutY="130.0" onAction="#selezioneSceltaTableView" prefWidth="150.0" />
-        <Button layoutX="397.0" layoutY="80.0" mnemonicParsing="false" onAction="#insertDao" prefHeight="25.0" prefWidth="105.0" text="Inserisci Altro " />
+        <Button fx:id="buttonView" layoutX="450.0" layoutY="80.0" mnemonicParsing="false" onAction="#sceltaView" prefHeight="25.0" prefWidth="54.0" text="View" />
       <Button fx:id="buttonInserisci" layoutX="805.0" layoutY="210.0" mnemonicParsing="false" text="Inserisci" visible="false" />
+      <Button fx:id="buttonInsert" layoutX="392.0" layoutY="80.0" mnemonicParsing="false" onAction="#sceltaInsert" prefHeight="25.0" prefWidth="54.0" text="Insert" />
     </children>
 </AnchorPane>
