--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcomeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcomeStage.fxml
@@ -24,10 +24,10 @@
          </children></AnchorPane>
       <AnchorPane maxHeight="500.0" maxWidth="300.0" minHeight="500.0" minWidth="300.0" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: #964B00;">
          <children>
-               <ImageView fx:id="imageWelcome2" fitHeight="498.0" fitWidth="298.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="https://github.com/PaoloTed/Progetto-OOBD_T1G22/blob/6c72f305dcc28934cb580da451f5e9a84f220d32/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/photo/welcomeFoto2.png" />
-                  </image></ImageView>
+            <ImageView fx:id="imageWelcome2" fitHeight="498.0" fitWidth="298.0" layoutY="2.0" pickOnBounds="true"
+                       preserveRatio="true">
+
+            </ImageView>
                <StackPane layoutX="16.0" layoutY="40.0" prefHeight="419.0" prefWidth="267.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #de5f4f; -fx-border-radius: 0; -fx-border-width: 4;" />
             <Text fill="#2b2d30" layoutX="24.0" layoutY="151.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
                <font>
